@@ -21,6 +21,7 @@ archup uses GTk+ and libnotify to show a desktop notification if updates are ava
                                       !!You should change this if root is executing archup!!
           --urgency|-u [value]        Set the libnotify urgency-level. Possible values are: low, normal and critical.
                                       The default value is normal. With changing this value you can change the color of the notification.
+	  --update|-U                 Updates the package lists, don't disaply notifications, must be root!
           --help                      Prints this help.
           --version                   Shows the version.
 .SH "CONFIGURATION"
